# kernel

./: Cargo.toml  build.rs  program-linker.ld
macros/src/: lib.rs
src/: error.rs  framebuffer.rs  main.rs  process.rs  serial.rs  terminal.rs
src/arch/: mod.rs
src/arch/x64/: mod.rs
src/arch/x64/mm/: pmm.rs
src/cpu/: descriptors.rs  exceptions.rs  mod.rs
src/drivers/: mod.rs
src/gfx/: framebuffer.rs  mod.rs  terminal.rs
src/hw/: exceptions.rs  mod.rs  pic.rs
src/interrupts/: exceptions.rs  handlers.rs  idt.rs  mod.rs
src/mm/: mod.rs  pmm.rs  vmm.rs
src/pc/: pit.rs
src/platform/: mod.rs
src/platform/pc/: framebuffer.rs  mod.rs  pic.rs  terminal.rs
