[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limine = "0.1"
spin = "0.9"
x86_64 = "0.14"
x86 = "0.52"
macros = {path="macros"}

[profile.release]
opt-level = "z"
lto = true
strip = true